--- a/LocationExample1/res/layout/activity_main.xml
+++ b/LocationExample1/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     tools:ignore="HardcodedText" >
 
     <TextView
-        android:id="@+id/cityLong"
+        android:id="@+id/longitudeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
@@ -37,7 +37,7 @@
     
 
     <TextView
-        android:id="@+id/cityLat"
+        android:id="@+id/latitudeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
