--- a/MapApp(New)/res/layout/activity_main.xml
+++ b/MapApp(New)/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         android:textSize="30sp" />
 
     <Spinner
-        android:id="@+id/spinner1"
+        android:id="@+id/locationSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/select_location"
