--- a/LocationExample1/res/layout/activity_no_results.xml
+++ b/LocationExample1/res/layout/activity_no_results.xml
@@ -2,25 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-
-    <TextView
-        android:id="@+id/noResultsTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="93dp"
-        android:layout_marginLeft="40dp"
-        android:text="@string/no_result"
-        android:textSize="30sp" />
+    
     
     <Button
         android:id="@+id/btnGPS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="258dp"
         android:text="@string/new_location"
         android:textSize="30sp" />
 
@@ -28,15 +17,17 @@
         android:id="@+id/btnGPSSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/btnGPS"
+        android:layout_below="@id/btnGPS"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:text="@string/new_search"
         android:textSize="30sp" />
+
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.MapFragment"
-        android:layout_below="@+id/btnGPS"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/btnGPSSearch"/>
 
 </RelativeLayout>
