--- a/Sixth/res/layout/activity_bar.xml
+++ b/Sixth/res/layout/activity_bar.xml
@@ -31,6 +31,7 @@
         android:layout_below="@+id/barName"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="22dp"
+        android:contentDescription="@string/PicHolder"
         android:gravity="center"
         android:src="@drawable/changos" />
 
@@ -83,7 +84,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="24dp"
         android:gravity="center"
-        android:text="Hours"
+        android:text="@string/Hours"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Button
@@ -94,14 +95,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="93dp"
         android:text="@string/specials" />
-
-    <TextView
-        android:id="@+id/setBarTester"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/btnTaxi"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="21dp"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
