--- a/Sixth/res/layout/activity_main.xml
+++ b/Sixth/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     tools:ignore="HardcodedText" 
-    android:background="#000000">
+    android:background="#000000"
+    >
 
     <Button
         android:id="@+id/btnSelectBar"
