--- a/Sixth/res/layout-normal/activity_main.xml
+++ b/Sixth/res/layout-normal/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#003300"
+    android:background="#3F4040"
     android:screenOrientation="portrait"
     tools:context=".MainActivity"
     tools:ignore="HardcodedText" >
